# lib2toast

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
src/lib2toast/: __main__.py  api.py  compile.py  debug.py  run.py  unicode_fix.py
tests/: checker.py  test.py  test_compile.py  test_custom_grammar.py  test_integration.py  test_run.py
tests/grammars/: braces.txt  dataclass.txt  range-literal.txt  soft-dataclass.txt
