[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lib2toast"
version = "0.0.1"
authors = [
  { name="Jelle Zijlstra", email="jelle.zijlstra@gmail.com" },
]
description = "Compiling a lib2to3 CST to a Python AST"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black",
]

[tool.pyright]
pythonVersion = "3.8"

[tool.ruff]
lint.select = [
  "ALL",
]

lint.ignore = [
  "ANN101",  # missing type annotation for self in method
  "ANN102",  # missing type annotation for cls in classmethod
  "FA100",
  "D102",
  "D101",
  "RET505",
  "PLR2004",
  "EM102",
  "D104",
  "D103",
  "TRY003",
  "EM101",
  "SIM108",
  "FIX002",
  "TD003",
  "TD004",
  "TD005",
  "N802",
  "A001",
  "T201",
  "D100",
  "S101",
  "TD002",
  "D211",
  "D213",
  "D203",
  "COM812",
  "RET506",
  "C901",
  "PLR0912",
  "PLR0911",
  "PLR0915",
  "RET507",
  "PD011",
]

line-length = 100
target-version = "py38"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.py$'
skip-magic-trailing-comma = true

exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
)/
'''
